MB LF | Fixed overlapping input box issue

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -82,7 +82,7 @@ button, input[type=text], input[type=url], input[type=email], input[type=passwor
 .input-container {
   background-color: white;
   position: fixed;
-  z-index: 100;
+  z-index: 1;
   bottom: 0;
   left:0;
   width:100%;
@@ -108,6 +108,7 @@ button, input[type=text], input[type=url], input[type=email], input[type=passwor
   width: 100vw;
   background-color: $container-background;
   margin: 0 auto 15vw;
+  z-index: 0;
 }
 
 .question {
